tests/errors/invoke-trig-too-often.expect
---STDERR---
error: Instance requires event to pulse no more than every 5 cycles but provided event may pulse every 3 cycles
  ┌─ tests/errors/invoke-trig-too-often.fil:9:3
  │
3 │     @interface<G, 5> go_G: 1,
  │     ------------------------ Interface requires event to trigger once in 5 cycles
  ·
7 │ component Main<T>(@interface<T, 3> go_T: 1) -> () {
  │                   ------------------------ Provided event may trigger every 3 cycles
8 │   M := new Mult;
9 │   m0 := invoke M<T+1>;
  │   ^^^^^^^^^^^^^^^^^^^^ Event binding violates @interface specification

